--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   <title>Daftar Produk</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  
+  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <h1>Daftar Produk</h1>
   
-  <table class="table">
+  <table class="table" id="daftar-produk">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -22,14 +24,29 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Spidol</td>
-        <td>Rp.9.000</td>
-        <td>7</td>
-      </tr>
+      
     </tbody>
   </table>
+  
+  <script type="module">
+  import { ambilDaftarProduk } from './main.js';
+  
+  $(document).ready(async function() {
+  let elemeDaftar = $("#daftar-produk > tbody");
+  let daftarProduk = await ambilDaftarProduk();
+  
+  daftarProduk.forEach((data) => {
+    elemenDaftar.append(
+      '<try>' +
+      '<th>' + '</th>' +
+      '<td>' + data.nama +'</td>' +
+      '<td>' + data.harga +'</td>' +
+      '<td>' + data.stok + '</td>' +
+      '</try>'
+      );
+  });
+  });
+  </script>
 </body>
 
 </html>
