menambah file form produk

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       
     </tbody>
   </table>
+  <a href="form-produk.html">Tambah Produk</a>
   
   <script type="module">
   import { ambilDaftarProduk, formatAngka } from './main.js';
