--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
       
     </tbody>
   </table>
+  
+  <img src="loader.gif" style="width: 2em; display: block" id="loader">
+  
   <a href="form-produk.html">Tambah Produk</a>
   
   <script type="module">
@@ -48,6 +51,9 @@
       );
       nomor = nomor + 1;
   });
+  
+  $('#loader').hide();
+  
   });
   </script>
 </body>
