--- a/form-produk.html
+++ b/form-produk.html
@@ -5,10 +5,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Form Produk</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  
+  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script> 
 </head>
 
-<body>
+<body class="m-3">
 <h1>form Produk</h1>
+
+<form class="mb-3">
+    <div class="mb-3">
+      <label class="form-label">Nama Siswa</label>
+      <input type="text" class="form-control" id="input-nama">
+    </div>
+ <div class="mb-3">
+      <label class="form-label">Harga</label>
+      <input type="text" class="form-control" id="input-harga">
+    </div>
+    <div class="mb-3">
+      <label class="form-label">Stok</label>
+      <input type="text" class="form-control" id="input-stok">
+    </div>
+    <button type="submit" class="btn btn-primary" id="tombol-tambah">Simpan</button>
+    
+  </form>
 
 <a href="index.html">Lihat Daftar Produk</a>
 </body>
