--- a/form-produk.html
+++ b/form-produk.html
@@ -16,7 +16,7 @@
 
 <form class="mb-3">
     <div class="mb-3">
-      <label class="form-label">Nama Siswa</label>
+      <label class="form-label">Nama Produk</label>
       <input type="text" class="form-control" id="input-nama">
     </div>
  <div class="mb-3">
@@ -32,6 +32,23 @@
   </form>
 
 <a href="index.html">Lihat Daftar Produk</a>
+
+<script type="module">
+  import {tambahProduk} from './main.js';
+  
+  let tombolTambah = document.getElementById('tombol-tambah');
+  let elemenNamaProduk = document.getElementById('input-nama');
+  let elemenHarga = document.getElementById('input-harga');
+  let elemenStok = document.getElemenById('input-stok');
+  
+  tombolTambah.addEventListener('click', async function (e) {
+    e.preventDefault();
+    await tambahProduk(elemenNamaProduk.value, elemenHarga.value, elemenStok.value);
+    window.location.href='index.html';
+    
+  });
+</script>
+
 </body>
 
 </html>
