--- a/form-produk.html
+++ b/form-produk.html
@@ -39,7 +39,7 @@
   let tombolTambah = document.getElementById('tombol-tambah');
   let elemenNamaProduk = document.getElementById('input-nama');
   let elemenHarga = document.getElementById('input-harga');
-  let elemenStok = document.getElemenById('input-stok');
+  let elemenStok = document.getElementById('input-stok');
   
   tombolTambah.addEventListener('click', async function (e) {
     e.preventDefault();
