--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Daftar Produk</title>
+  <title>Daftar Pembeli</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   
@@ -12,15 +12,15 @@
 </head>
 
 <body class="m-3">
-  <h1>Daftar Produk</h1>
+  <h1>Daftar Pembeli</h1>
   
   <table class="table" id="daftar-produk">
     <thead>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">Nama Produk</th>
-        <th scope="col">Harga</th>
-        <th scope="col">Stok</th>
+        <th scope="col">Nama Pembeli</th>
+        <th scope="col">alamat</th>
+        <th scope="col">noTlpn</th>
         <th scope="col">aksi</th>
       </tr>
     </thead>
@@ -31,23 +31,23 @@
   
   <img src="loader.gif" style="width: 2em; display: block" id="loader">
   
-  <a href="form-produk.html">Tambah Produk</a>
+  <a href="form-produk.html">Tambah Pembeli</a>
   
   <script type="module">
-  import { ambilDaftarProduk, formatAngka } from './main.js';
+  import { ambilDaftarPembeli, formatAngka, hapusPembeli } from './main.js';
   
   $(document).ready(async function() {
-  let elemenDaftar = $("#daftar-produk > tbody");
-  let daftarProduk = await ambilDaftarProduk();
+  let elemenDaftar = $("#daftar-pembeli > tbody");
+  let daftarPembeli = await ambilDaftarPembeli();
   let nomor = 1;
   
-  daftarProduk.forEach((data) => {
+  daftarPembeli.forEach((data) => {
     elemenDaftar.append(
       '<tr>' +
       '<th>' + nomor +  '</th>' +
       '<td>' + data.nama +'</td>' +
-      '<td>' + formatAngka(data.harga)  +'</td>' +
-      '<td>' + data.stok + '</td>' +
+      '<td>' + formatAngka(data.alamat)  +'</td>' +
+      '<td>' + data.noTlpn + '</td>' +
       '<td>' + '<button class="btn btn-danger tombol-hapus" data ="' + data.id + '">hapus</button>' +
       '<img src="loader.gif" style="width: lem; display: none" id="' + data.id + '">'+
       '</td>' +
@@ -61,7 +61,7 @@
   $('.tombol-hapus').click(async function() {
     $(this).attr('disebled','disebled');
     $('#' + $(this).attr('data')).show();
-    await hapusProduk($(this).attr('data'));
+    await hapusPembeli($(this).attr('data'));
     location.reload();
   });
   
